add width for form

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -258,6 +258,12 @@
   margin-bottom: 20px;
 }
 
+@media screen and (min-width: 1200px) {
+  .form {
+    width:60%;
+  }
+}
+
 .label {
   text-transform: uppercase;
 }
